<resources>
    <string name="app_name">MaterialDesignSamples</string>
    <string name="bottomsheetdialog">BottomSheetDialog 示例</string>
    <string name="toolbar_title">Toolbar使用示例</string>
    <string name="sub_title">Toolbar SubTitle</string>
    <string name="my_device">我的设备</string>
    <string name="near_device">附近设备</string>
    <string name="my_friend">我的好友</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="cover_header_behavior" translatable="false">com.zhouwei.md.materialdesignsamples.behavoir.CoverHeaderScrollBehavior</string>
    <string name="content_behavior" translatable="false">com.zhouwei.md.materialdesignsamples.behavoir.HeaderScrollBehavior</string>
    <string name="floating_title_behavoir">com.zhouwei.md.materialdesignsamples.behavoir.FloatingHeaderTitleBehavior</string>
    <string name="js_comment">%1$d 次阅.%2$d 评论.%3$d 喜欢.%4$d 打赏</string>
    <string name="t_join">Join</string>
    <string name="bt_login">Login</string>
    <string name="contact_us_chana">Contact US @GHANA:+233 54 235 3946</string>
    <string name="about_eagtee_global">About EGATEE Global ></string>
    <string name="forgot_password">Forgot password</string>
    <string name="please_enter"> Please enter...</string>
</resources>